# gator

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
crates/gator-cli/: Cargo.toml
crates/gator-cli/src/: agent.rs  cleanup_cmd.rs  config.rs  dispatch_cmd.rs  export_cmd.rs  gate_cmd.rs  invariant_cmds.rs  log_cmd.rs  main.rs  merge_cmd.rs  plan_cmds.rs  pr_cmd.rs  report_cmd.rs  resolve.rs  serve_cmd.rs  status_cmd.rs
crates/gator-cli/src/tui/: app.rs  mod.rs  ui.rs
crates/gator-cli/tests/: plan_cli_test.rs
crates/gator-core/: Cargo.toml
crates/gator-core/src/: lib.rs  task.rs
crates/gator-core/src/gate/: evaluator.rs  mod.rs
crates/gator-core/src/harness/: claude_code.rs  mod.rs  registry.rs  trait_def.rs  types.rs
crates/gator-core/src/invariant/: runner.rs  types.rs
crates/gator-core/src/isolation/: container.rs  mod.rs  worktree.rs
crates/gator-core/src/lifecycle/: mod.rs
crates/gator-core/src/orchestrator/: mod.rs
crates/gator-core/src/plan/: generate.rs  materialize.rs  mod.rs  parser.rs  service.rs  toml_format.rs
crates/gator-core/src/presets/: invariants.toml  mod.rs
crates/gator-core/src/state/: dispatch.rs  mod.rs  queries.rs
crates/gator-core/src/token/: guard.rs  mod.rs
crates/gator-core/src/worktree/: mod.rs
crates/gator-core/tests/: e2e_single_agent.rs  fleet_orchestration_test.rs  gate_runner_test.rs  lifecycle_test.rs  materialize_retry_test.rs  orchestrator_test.rs  plan_service_test.rs  state_machine_test.rs
crates/gator-db/: Cargo.toml
crates/gator-db/migrations/: 001_initial_schema.sql  002_budget.sql  003_harness_and_isolation.sql  004_invariant_timeout.sql  005_container_image.sql
crates/gator-db/src/: config.rs  lib.rs  migrations.rs  models.rs  pool.rs
crates/gator-db/src/queries/: agent_events.rs  gate_results.rs  invariants.rs  mod.rs  plans.rs  tasks.rs
crates/gator-db/tests/: agent_events_test.rs  invariants_test.rs  migrations_test.rs  plan_crud_test.rs
crates/gator-test-utils/: Cargo.toml
crates/gator-test-utils/src/: lib.rs
docs/: 2026-02-19.add-more-containering.md  dev-log.md  how-to.md  tasks.md  todo.md
docs/examples/: minimal.toml  rust-project.toml
docs/plans/: 2026-02-08-hardening-design.md  initial-implementation-plan.md
plans/: gator-serve.toml
scripts/: install.sh  start-test-pg.sh
