[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2024"
description = "CLI for orchestrating fleets of LLM coding agents"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# Error handling
anyhow = "1"
thiserror = "2"
# Async traits
async-trait = "0.1"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Futures/streams
futures = "0.3"
tokio-stream = "0.1"
tokio-util = "0.7"
async-stream = "0.3"
# System
dirs = "6"
libc = "0.2"
rand = "0.9"
# Cryptography
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# TUI
ratatui = "0.29"
crossterm = "0.28"
# Shell completions
clap_complete = "4"
# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
# Testing
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
