[package]
name = "gator-cli"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "gator"
path = "src/main.rs"

[dependencies]
gator-core = { path = "../gator-core" }
gator-db = { path = "../gator-db" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
dirs.workspace = true
hex.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
clap_complete.workspace = true
ratatui.workspace = true
crossterm.workspace = true
tokio-util.workspace = true
axum.workspace = true
tower-http.workspace = true

[dev-dependencies]
gator-test-utils = { path = "../gator-test-utils" }
tempfile.workspace = true
tower.workspace = true
