[package]
name = "gator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gator-db = { path = "../gator-db" }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-stream.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
