[package]
name = "gator-test-utils"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
gator-db = { path = "../gator-db" }
testcontainers.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
